# cmd-sudoku

./: .gitignore  README.md  main.py  pyproject.toml
src/: gameplay.py  main.py  sudoku.css  sudoku.py
src/widgets/: __init__.py  cell.py
