[tool.poetry]
name = "cmd-sudoku"
version = "0.1.0"
description = ""
authors = ["thomaszdxsn <thomaszdxsn@icloud.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cmd_sudoku"}]

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.2.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
